trunk/OldArchive/abb3f672aec45e08a67b91eeecf2151e-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:10:3: error: 'id<deleter_t>::~id()' cannot be overloaded
   ~id() {
   ^
main.cpp:7:3: error: with 'id<deleter_t>::~id()'
   ~id() {
   ^
main.cpp: In function 'int main()':
main.cpp:26:15: error: missing template arguments before '(' token
  auto one = id(deleter_one);
               ^
main.cpp:27:15: error: missing template arguments before '(' token
  auto two = id(deleter_two);
               ^
